# agfs

./: .gitignore  README.md  install.sh
.github/workflows/: agfs-go.yml  agfs-server.yml  agfs-shell.yml  daily-build.yml
agfs-fuse/: README.md
agfs-fuse/pkg/cache/: cache.go  (+1 more)
agfs-mcp/: README.md
agfs-sdk/go/: client.go  client_test.go  streaming_progress_timeout_test.go  types.go
agfs-sdk/python/: pyproject.toml
agfs-server/: Makefile  README.md  agfs-server.service  config.example.yaml  go.mod  go.sum
agfs-server/docs/: http-body-limits-and-streaming.md  readiness-and-mount-status.md
agfs-server/scripts/: run_failpoint_tests.py
agfs-shell/: README.md  pyproject.toml
agfs-shell/agfs_shell/: __init__.py  ast_nodes.py  builtins.py  cli.py  completer.py  control_parser.py  exit_codes.py  expression.py  lexer.py  pipeline.py  process.py  shell.py  streams.py  webapp_server.py
agfs-shell/agfs_shell/commands/: fsgrep.py  llm.py  ls.py  source.py  tail.py  truncate.py  upload.py
agfs-shell/tests/: conftest.py  test_builtins.py  test_docs_webapp_e2e.py  test_expression.py  test_lexer.py  test_narrow_broad_except.py  test_process.py  test_shell_core.py  test_shell_happy_path_e2e.py  test_streaming_input_stream.py  test_streaming_pipeline_e2e.py  test_webapp_server.py
agfs-shell/webapp/: .gitignore  package-lock.json  package.json  setup.sh
agfs-shell/webapp/src/: App.css  App.jsx
agfs-shell/webapp/src/components/: FileTree.jsx  MenuBar.jsx
docs/: e2e.md  first-run.md
scripts/e2e/: run-backend-e2e.sh  run-core-e2e.sh  run-shell-sdk-e2e.sh
(+51 files in other folders)
