[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agfs-shell"
dynamic = ["version"]
description = "Experimental shell with Unix-style pipeline support"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "agfs authors" }
]
dependencies = [
    "pyagfs>=1.4.0",
    "rich",
    "jq",
    "llm",
    "pyyaml",
]

[project.optional-dependencies]
webapp = [
    "aiohttp>=3.9.0",
    "aiohttp-cors>=0.7.0",
]

[tool.uv.sources]
pyagfs = { path = "../agfs-sdk/python", editable = true }

[project.scripts]
agfs-shell = "agfs_shell.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agfs_shell"]

[tool.hatch.version]
path = "agfs_shell/__init__.py"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pre-commit>=3.6.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
markers = [
    "e2e: opt-in end-to-end tests that exercise real first-run commands and subprocesses",
]
